<?xml version="1.0"?>
<package>
  <name>boost_numpy</name>
  <version>0.0.0</version>
  <description>A catkin packaged Boost.Numpy</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="klas.kronander@epfl.ch">klas kronander</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- may add these later to directly provide tools for converting to/from eigen data types -->
  <!-- <build_depend>eigen</build_depend> -->
  <!-- <run_depend>eigen</run_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
